--- a/jenkinsfile
+++ b/jenkinsfile
@@ -2,14 +2,26 @@ pipeline {
     agent any
 
     stages {
-        stage('hello') {
+        stage('Build') {
+            agent{
+                docker{
+                    image 'node:18-alpine'
+                    reuseNode true
+
+                }
+            }
             steps {
-                
-                echo " hello word"
-                
+                 sh '''
+               
+                ls -la
+                node --version
+                npm --version
+               npm ci
+npm run build
+ls -la
+                '''
             }
         }
-       
     }
     
 }
