--- a/jenkinsfile
+++ b/jenkinsfile
@@ -17,10 +17,14 @@ pipeline {
                 node --version
                 npm --version
                npm ci
-npm run build
-ls -la
+               npm run build
+               ls -la
                 '''
             }
+        }
+        stage('Test'){
+steps {
+    echo "Test stage"
         }
     }
     
