--- a/jenkinsfile
+++ b/jenkinsfile
@@ -20,25 +20,26 @@ pipeline {
                 '''
             }
         }
+        
         stage('Test') {
-             agent {
+            agent {
                 docker {
                     image 'node:18-alpine'
                     reuseNode true
                 }
             }
             steps {
-                sh'''
-                test -f build/index.html
-                npm test
+                sh '''
+                    test -f build/index.html
+                    npm test
                 '''
             }
         }
     }
-post {
-    always{
-        junit 'test-result/junit.xml'
-    }
-}
 
+    post {
+        always {
+            junit 'test-results/junit.xml'
+        }
+    }
 }
