--- a/jenkinsfile
+++ b/jenkinsfile
@@ -31,14 +31,16 @@ pipeline {
                             reuseNode true
                         }
                     }
+
                     steps {
                         sh '''
+                            #test -f build/index.html
                             npm test
                         '''
                     }
                     post {
                         always {
-                            junit 'jest-results/junit.xml'
+                            junit 'test-results/junit.xml'
                         }
                     }
                 }
@@ -50,18 +52,19 @@ pipeline {
                             reuseNode true
                         }
                     }
+
                     steps {
                         sh '''
                             npm install serve
-                            node_modules/.bin/serve -s build & SERVER_PID=$!
+                            node_modules/.bin/serve -s build &
                             sleep 10
-                            npx playwright test --reporter=html
-                            kill $SERVER_PID
+                            npx playwright test  --reporter=html
                         '''
                     }
+
                     post {
                         always {
-                            publishHTML([allowMissing: true, alwaysLinkToLastBuild: false, keepAll: false, reportDir: 'playwright-report', reportFiles: 'index.html', reportName: 'Playwright HTML Report', reportTitles: '', useWrapperFileDirectly: true])
+                            publishHTML([allowMissing: false, alwaysLinkToLastBuild: false, keepAll: false, reportDir: 'playwright-report', reportFiles: 'index.html', reportName: 'Playwright HTML Report', reportTitles: '', useWrapperFileDirectly: true])
                         }
                     }
                 }
@@ -77,16 +80,10 @@ pipeline {
             }
             steps {
                 sh '''
-                    npm install -g netlify-cli
-                    netlify --version
+                    npm install netlify-cli
+                    node_modules/.bin/netlify --version
                 '''
             }
         }
     }
-    post {
-    always {
-        junit '**/jest-results/junit.xml'
-    }
-}
-
 }
