--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,12 +1,8 @@
 pipeline {
     agent any
 
-    environment {
-        NETLIFY_SITE_ID = '29cb8914-af61-4693-9117-e1faf2e67187'
-        NETLIFY_AUTH_TOKEN = credentials('netlify_token')
-    }
-
     stages {
+
         stage('Build') {
             agent {
                 docker {
@@ -14,14 +10,13 @@ pipeline {
                     reuseNode true
                 }
             }
-
             steps {
                 sh '''
                     ls -la
                     node --version
                     npm --version
-                    npm run build
                     npm ci
+                    npm run build
                     ls -la
                 '''
             }
@@ -39,8 +34,14 @@ pipeline {
 
                     steps {
                         sh '''
+                            #test -f build/index.html
                             npm test
                         '''
+                    }
+                    post {
+                        always {
+                            junit 'test-results/junit.xml'
+                        }
                     }
                 }
 
@@ -57,21 +58,13 @@ pipeline {
                             npm install serve
                             node_modules/.bin/serve -s build &
                             sleep 10
-                            npx playwright test --reporter=html
+                            npx playwright test  --reporter=html
                         '''
                     }
 
                     post {
                         always {
-                            publishHTML([ 
-                                allowMissing: false, 
-                                alwaysLinkToLastBuild: false, 
-                                keepAll: false, 
-                                reportDir: 'playwright-report', 
-                                reportFiles: 'index.html', 
-                                reportName: 'Local E2E', 
-                                useWrapperFileDirectly: true
-                            ])
+                            publishHTML([allowMissing: false, alwaysLinkToLastBuild: false, keepAll: false, reportDir: 'playwright-report', reportFiles: 'index.html', reportName: 'Playwright HTML Report', reportTitles: '', useWrapperFileDirectly: true])
                         }
                     }
                 }
@@ -85,14 +78,10 @@ pipeline {
                     reuseNode true
                 }
             }
-
             steps {
                 sh '''
                     npm install netlify-cli
-                    ./node_modules/.bin/netlify --version
-                    echo "Deploying to production. Site ID: $NETLIFY_SITE_ID"
-                    ./node_modules/.bin/netlify status
-                    ./node_modules/.bin/netlify deploy --dir=build --prod
+                    node_modules/.bin/netlify --version
                 '''
             }
         }
