--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,6 +1,8 @@
 pipeline {
     agent any
-
+  environment {
+        NETLIFY_SITE_ID = 'c44263b9-df0a-4af3-afb1-65a4c867531e'
+    }
     stages {
 
         stage('Build') {
@@ -82,6 +84,7 @@ pipeline {
                 sh '''
                     npm install netlify-cli
                     node_modules/.bin/netlify --version
+                       echo "Deploying to production. Site ID: $NETLIFY_SITE_ID"
                 '''
             }
         }
