--- a/jenkinsfile
+++ b/jenkinsfile
@@ -2,6 +2,7 @@ pipeline {
     agent any
   environment {
         NETLIFY_SITE_ID = 'c44263b9-df0a-4af3-afb1-65a4c867531e'
+          NETLIFY_AUTH_TOKEN = credentials('netlify-token')
     }
     stages {
 
@@ -85,6 +86,7 @@ pipeline {
                     npm install netlify-cli
                     node_modules/.bin/netlify --version
                     echo "Deploying to production. Site ID: $NETLIFY_SITE_ID"
+                    ./node_modules/.bin/netlify status
                 '''
             }
         }
